# plantops

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
app/: Home.py  shared.py
app/pages/: 1_Overview.py  2_Predictions.py  3_Trends.py  4_Review_Queue.py  5_Reports.py
configs/: config.yaml  logging.yaml
docs/: architecture.md  schema.md
models/: README.md
models/stub_model/: README.md
notebooks/: exploratory_analysis.ipynb
src/: __init__.py  __main__.py  constants.py  logging_utils.py  settings.py
src/analytics/: confidence.py  exports.py  plotting.py  summary.py  trends.py
src/automation/: __init__.py  jobs.py  scheduler.py  watcher.py
src/cli/: generate_report.py  init_db.py  predict_batch.py  predict_one.py  run_pipeline.py
src/inference/: base.py  model_loader.py  postprocessing.py  predictor.py  preprocessing.py  stub_classifier.py
src/pipeline/: batch_runner.py  discover.py  move_files.py  process_image.py  review_logic.py  validate.py
src/reports/: markdown_report.py  templates.py
src/storage/: db.py  queries.py  repositories.py  schema.py
tests/: conftest.py  test_automation_jobs.py  test_batch_runner.py  test_db.py  test_discover.py  test_end_to_end.py  test_predictor.py  test_queries.py  test_report_generation.py  test_review_logic.py  test_scheduler.py  test_settings.py  test_smoke.py  test_stub_classifier.py  test_validate.py  test_watcher.py
